fixed navBar gap

--- a/css/WelcomeSearch.css
+++ b/css/WelcomeSearch.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	background-color: rgba(255, 255, 255, 0.7);
 	width: 100%;
-	height: 20px;
+	height: 30px;
 	margin-top: -30px;
 }
 
